<resources>
    <string name="app_name">appSaloonPartner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_my_account">Minha conta</string>

    <string name="action_confirmar">Confirmar</string>
    <string name="action_cancelar">Cancelar</string>
    <string name="action_delete">Excluir</string>
    <string name="action_edit">Alterar</string>
    <string name="action_help">Ajuda</string>
    <string name="action_new">Novo</string>
    <string name="action_add_product">Adicionar Produto</string>
    <string name="action_go_back">Voltar</string>
    <string name="action_image_select">Selecione uma logomarca</string>

    <string name="establishment">Nome do estabelecimento</string>
    <string name="responsable">Nome do responsável</string>
    <string name="establishment_adress">Endereço do estabelecimento</string>
    <string name="establishment_telephone">Telefone do estabelecimento</string>
    <string name="cnpj">CNPJ</string>
    <string name="email">Email :</string>
    <string name="secret">Senha :</string>
    <string name="new_secret">Nova senha :</string>
    <string name="secret_confirm">Confirme a senha</string>
    <string name="type">Selecione o tipo</string>
    <string name="yes_no">Deseja receber agendamento?</string>

    <string name="hint_email">Informe o email</string>
    <string name="hint_name">Informe o nome do estabelecimento</string>
    <string name="hint_responsable">Informe o nome do responsável</string>
    <string name="hint_adress">Informe o endereço do estabelecimento</string>
    <string name="hint_telephone">Informe o Telefone do estabelecimento</string>
    <string name="hint_cnpj">Informe o CNPJ</string>
    <string name="hint_secret">Informe a senha</string>
    <string name="hint_confirm_secret">Confirme a senha</string>
    <string name="hint_new_secret">Informe a nova senha</string>
    <string name="hint_new_client">Informe o nome do Cliente</string>
    <string name="hint_new_telephone">Informe o Telefone</string>
    <string name="hint_quantity">Informe a quantidade</string>
    <string name="hint_description_establishment">Informe a descrição do estabelecimento</string>

    <string name="label_select_type">Selecione o tipo</string>
    <string name="label_description_establishment">Descrição do estabelecimento</string>
    <string name="label_yes">Sim</string>
    <string name="label_no">Não</string>
    <string name="label_email">Email do responsável</string>
    <string name="label_name">Nome do estabelecimento</string>
    <string name="label_type_id">Tipo de estabelecimento</string>
    <string name="label_responsible">Nome do responsável</string>
    <string name="label_cnpj">Cnpj</string>
    <string name="label_address">Endereço</string>




    <string name="signupregister">Registre-se</string>
    <string name="sair_do_app">Sair do app</string>
    <string name="logout">Desconectar do app</string>
    <string name="login_google">Login com Google</string>
    <string name="login_email">Login com e-mail</string>
    <string name="signup">Não tem uma conta?</string>
    <string name="forgotpassword">Esqueci a senha</string>
    <string name="recoverforgotpassword">Recuperar a senha</string>
    <string name="login_facebook">Login com Facebook</string>
    <string name="msg_error_authentication_failure">Autenticação falhou!</string>
    <string name="msg_error_session_expired">Sessão expirada!</string>
    <string name="msg_error_email_exist_google">Esse endereço de email já foi utilizado para se conectar no app com o Google</string>

    <string name="error_400">Falha na tentativa!</string>
    <string name="error_503">Aplicativo fora do ar. Aguarde o retorno!</string>

    <string name="validation_connection">Dispositivo sem internet.</string>
    <string name="validation_establishment">Informe o nome do estabelecimento.</string>
    <string name="validation_secret_compare">As senhas não conferem.</string>
    <string name="validation_type">Obrigatório selecionar o tipo de estabelecimento.</string>
    <string name="validation_image">Selecione uma logomarca.</string>


    <string-array name="ArrayPayment">
        <item>1,Dinheiro</item>
        <item>2,Cartão de Crédito</item>
        <item>3,Cartão de Débito</item>
        <item>4,Boleto bancário</item>
        <item>5,Cheque</item>
        <item>6,Pix</item>
        <item>7,30 dias</item>
        <item>8,30/60 dias</item>
        <item>9,30/60/90 dias</item>
        <item>10,30/60/90/120 dias</item>
        <item>11,Transferência bancária</item>
    </string-array>

    <string-array name="ArrayStatus">
        <item>1,A receber</item>
        <item>2,Recebida</item>
    </string-array>

    <string-array name="Graphics">
        <item>Top 5 produtos + vendidos</item>
        <item>Serviços por mês e ano</item>
        <item>Faturamento por mês e ano</item>
        <item>Lucros por mês e ano</item>
    </string-array>

    <string-array name="Menu_Main">
        <item>Clientes</item>
        <item>Produtos</item>
        <item>Vendas</item>
        <item>Contas a receber/recebidas</item>
        <item>Gráficos</item>
    </string-array>

    <string name="validation_login">Informe o e-mail e senha!</string>

    <string-array name="ArrayType">
        <item>1,Barbearia</item>
        <item>2,Clínica de Estética</item>
        <item>3,Clínica de Podologia</item>
        <item>4,Esmalteria</item>
        <item>5,Estúdio de Tatuagem</item>
        <item>6,SPA</item>
        <item>7,Salão de Beleza</item>
        <item>8,Outro</item>
    </string-array>

</resources>