<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
                <item
                    android:id="@+id/nav_my_account"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_my_account" />

        <item
            android:id="@+id/navigation_logout"
            android:icon="@drawable/ic_baseline_close_24"
            android:title="@string/logout" />
        <item
            android:id="@+id/navigation_sair_do_app"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/sair_do_app" />

    </group>
</menu>